--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -6,20 +6,20 @@
 }
 
 .navbar .logo {
-    width: 290px;
+    width: 200px;
 }
 
 .navbar-menu {
     display: flex;
     list-style: none;
-    gap: 20px;
-    color: #49557E;
-    font-size: 18px;
+    gap: 30px;
+    color: #C9184A;
+    font-size: 20px;
 }
 
 .navbar-menu .active {
     padding-bottom: 2px;
-    border-bottom: 2px solid #49557E;
+    border-bottom: 2px solid #C9184A;
 }
 
 .navbar-right {
