--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer{
     color: #D9D9D9;
-    background-color: #A4133C;
+    background-color: #B73229;
     display: flex;
     flex-direction: column;
     align-items: center;
