--- a/frontend/src/pages/Prescriptions/Prescriptions.css
+++ b/frontend/src/pages/Prescriptions/Prescriptions.css
@@ -1,17 +1,33 @@
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+main {
+  flex: 1;
+}
+
 .prescription-container {
-  width: 100%;
-  max-width: 600px;
+  width: 40%;
+  height: 10%;
+  max-width: 480px;
   margin: 0 auto;
   text-align: center;
   padding: 40px;
+  text-align: center;
   background: rgba(255, 255, 255, 0.95);
   border-radius: 15px;
   box-shadow: 0 12px 40px rgba(0, 0, 0, 0.3);
   margin-bottom: 50px;
+  min-height: calc(50vh - 100px); /* Adjust the value as needed */
 }
 
 .prescription-container h2 {
   margin-bottom: 30px;
+  text-align: center;
   color: #222;
   font-size: 24px;
 }
@@ -50,10 +66,21 @@
   color: #333;
 }
 
+footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  padding: 20px 0;
+  text-align: center;
+  margin-top: 30px; /* Adjust the value as needed */
+}
+
 /* Media Queries for Responsiveness */
 @media (max-width: 768px) {
   .prescription-container {
-    padding: 30px;
+    padding: 10px;
   }
   
   .prescription-container h2 {
